--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=SmartAttendance
 
+# --- SMART DATABASE SWITCHING ---
+# If running on Cloud (Railway), these variables will exist.
+# If running locally, it defaults to H2.
 
-# H2 Database Configuration (Runs inside RAM)
-spring.datasource.url=jdbc:h2:mem:attendancedb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:attendancedb}
+spring.datasource.username=${DATABASE_USERNAME:sa}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+spring.datasource.driverClassName=${DATABASE_DRIVER:org.h2.Driver}
 
-# Console to view DB (http://localhost:8080/h2-console)
+# Keep H2 Console for local testing
 spring.h2.console.enabled=true
-
-# Hibernate (Auto-create tables)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+# H2 Database Configuration (Runs inside RAM)
+#spring.datasource.url=jdbc:h2:mem:attendancedb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
